--- a/views/contact.hbs
+++ b/views/contact.hbs
@@ -1,6 +1,6 @@
 <body>
     <h2>Contact me</h2>
-<form>
+<form action="/contact/send-message" method="POST">
   <label>
     Your name: <input type="text" name="author">
   </label>
