--- a/views/contact.hbs
+++ b/views/contact.hbs
@@ -1,12 +1,12 @@
 <body>
     <h2>Contact me</h2>
     {{#if isSent}}
-    <div class="isSent">The message has been sent!</div>
+    <div class="isSent">The message has been sent! File {{fileName}} has been saved" </div>
     {{/if}}
     {{#if isError}}
     <div class="isError">You can't leave fields empty!</div>
     {{/if}}
-<form action="/contact/send-message" method="POST">
+<form action="/contact/send-message" enctype="multipart/form-data" method="post">
   <label>
     Your name: <input type="text" name="author">
   </label>
@@ -18,6 +18,9 @@
   </label>
    <label>
     Message: <textarea name="message"></textarea>
+  </label>
+  <label>
+      Project design: <input type="file" name="project" accept=".png, .jpg, .jpeg, .gif ">
   </label>
   <button type="submit">Send message</button>
 </form>
