--- a/views/contact.hbs
+++ b/views/contact.hbs
@@ -7,7 +7,7 @@
     <div class="isError">You can't leave fields empty!</div>
     {{/if}}
     {{#if uploadedImage}}
-    <img src='/uploads/{{uploadedImage}}'>
+    <img class="uploadedImage" src='/uploads/{{uploadedImage}}'>
     {{/if}}
 <form action="/contact/send-message" enctype="multipart/form-data" method="post">
   <label>
